2007-04-12 Manuel Arostegui <marostegui@artica.es>

	* fr/*: Added to reposistory. French translation 
	  by Denis Chupau. Almost done, but not finished yet.

2007-04-11 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_quick_install.xml: Added information about
	the new Pandora Web Console Installation Wizard.

2007-04-11 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_quick_install.xml: Added some new text and some
          corrections done as well.

2007-04-04 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_introduction.xml, pandora_chapter1.xml: Text corrections.

2007-04-04 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_quick_install.xml: Added to reposistory. XML file for
	the future Pandora quick install guide.

2007-03-20 Manuel Arostegui <marostegui@artica.es>

	*  en/pandora_install.xml: Fixed some confusions; using Babel rather
	than Pandora.

2006-12-26 Raul Mateos  <raulofpandora@gmail.com>

	* extras/Pandora_DataServer_Diagram-1.odg,
	Pandora_DataServer_Diagram-2.odg, Pandora_NetworkServer_Diagram.odg:
	New files with new architecture. First try.

2006-12-26 Manuel Arostegui <marostegui@artica.es>

	* en/pandora_introduction.xml, pandora_advanced.xml, pandora_install.xml
	  : Text corrections.

	* en/man/pandora.1, pandora_agents.1, pandora, pandora_agents,
	  pandora_console.1, pandora_console, pandora_server.1, pandora_server
	  : Added to repository. Pandora Man Pages

2006-12-25 Raul Mateos  <raulofpandora@gmail.com>
	
	* pandora_chapter3.xml: Explanation of monitor added. Solved error with 
	english file (maximun-> manimum; minimun -> minimum)
	
2006-12-20 Manuel Arostegui <marostegui@artica.es>

	* pandora_install.xml: Added a note about jpgraph installation.

2006-12-19 Raul Mateos  <raulofpandora@gmail.com>

	* pandora_chapter3.xml: Changed some texts.

2006-12-04 Raul Mateos  <raulofpandora@gmail.com>

	* en/images/servers1.png, servers2.png: Renamed files from Servers.png and
	servers1.png.
	