@@ -1,3 +1,8 @@
+2007-04-19 Manuel Arostegui <marostegui@artica.es>
+
+	* en/pandora_quick_install.xml: Added some improvemnts
+	  to make the installation more clear.
+
 2007-04-12 Manuel Arostegui <marostegui@artica.es>
 
 	* fr/*: Added to reposistory. French translation 
